--- a/README.org
+++ b/README.org
@@ -10,10 +10,12 @@ there is anything substantial, then I will add them here.
 Advent of Code for me is an opportunity to learn about a programming
 language. The code in the solutions is not exemplary, or good examples
 of using these languages. You are free to use the code as you see fit,
-but you also get to keep the bugs therein! In the repository I have used the following languages to a
-greater or lesser extent:
+but you also get to keep the bugs therein! In the repository I have
+used the following languages to a greater or lesser extent:
+- Clojure
+*- Lisp
+*-* (2023) - Rust
 
-** Clojure
-** Lisp
-** (2023) - Rust
-
+I have credited others for their code where I have resorted to looking
+for help. If I have left someone out - please let me know and I will
+add you in, and hope you can accept my apologies!
